<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/asd_type"
        />
    <Spinner
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <TextView
        android:id="@+id/address_label"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/asd_address"
        />
    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/asd_username"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/asd_password"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:maxLength="200"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/asd_enabled"
        />
    <CheckBox
        android:id="@+id/enabled"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
</LinearLayout>
